--- a/src/pages/SubNavPage/SubNavPage.module.css
+++ b/src/pages/SubNavPage/SubNavPage.module.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     width: 73%;
     height: 320px;
+    margin-bottom: 40px;
 }
 .subNavLeft{
     width: 33%;
@@ -22,17 +23,6 @@
     font-family: 'Roboto', sans-serif;
     font-style: normal;
 }
-.boldText{
-    font-size: 28px;
-    font-weight: 900;
-    color: #254F4C;
-    text-align: left;
-}
-.darkColor{
-    color: #254F4C;
-    text-align: left;
-    padding-bottom: 15px;
-}
 .menuBtn{
     width: 200px;
     height: 40px;
@@ -41,8 +31,4 @@
     background-color: #FF583E;
     color: white;
     cursor: pointer;
-}
-.subNavImg{
-    width: 450px;
-    height: 330px;
 }
