--- a/src/components/SecondProducts/SecondProducts.module.css
+++ b/src/components/SecondProducts/SecondProducts.module.css
@@ -33,3 +33,13 @@
     text-align: center;
     padding-bottom: 9px;
 }
+.btnCart{
+    border: none;
+    border-radius: 20px;
+    background-color: #FF583E;
+    color: white;
+    width: 170px;
+    height: 38px;
+    cursor: pointer;
+    font-weight: bold;
+}
