--- a/src/pages/CartPage/CartPage.module.css
+++ b/src/pages/CartPage/CartPage.module.css
@@ -6,9 +6,60 @@
 }
 .cart{
     width: 75%;
-    border: 1px solid black;
+    border: 1px dotted greenyellow;
+    box-shadow: 0 0 5px 5px #6f87d0;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 15px;
+}
+.cartRow{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.cartCol{
+    width: 15%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.cartCounter{
+    width: 70%;
+    display: flex;
+    justify-content: space-evenly;
+}
+.cartBGCol{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+}
+.productImg{
+    width: 130px;
+    height: 100px;
+    border-radius: 30px;
+}
+.productText{
+    color: darkblue;
+}
+.productDelete{
+    font-size: 22px;
+    color: salmon;
+    margin: 30px;
+}
+.productDelete:hover{
+    cursor: pointer;
+}
+.lessSpacing{
+    margin: 0;
+}
+.line{
+    color: blueviolet;
+    font-size: 30px;
+}
+.discount{
+    color: green;
 }
