--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,23 @@
     flex-direction: column;
     align-items: center;
 }
+.btnCart{
+    border: none;
+    border-radius: 20px;
+    background-color: #FF583E;
+    color: white;
+    width: 170px;
+    height: 38px;
+    cursor: pointer;
+    font-weight: bold;
+}
+.btnNew{
+    border: none;
+    border-radius: 20px;
+    background-color: green;
+    color: white;
+    width: 170px;
+    height: 38px;
+    cursor: pointer;
+    font-weight: bold;
+}
