--- a/src/pages/FeedbackPage/FeedbackPage.module.css
+++ b/src/pages/FeedbackPage/FeedbackPage.module.css
@@ -26,7 +26,7 @@
 }
 
 .bgImg{
-    background-image: url("/src/img/pen.png");
+    background-image: url("/src/media/pen.png");
     background-size: 100% 100%;
     height: 99%;
     display: flex;
