--- a/src/pages/FeedbackPage/FeedbackPage.module.css
+++ b/src/pages/FeedbackPage/FeedbackPage.module.css
@@ -35,8 +35,8 @@
 }
 
 .imgFrame{
-    width: 22%;
-    height: 330px;
+    width: 80%;
+    height: 345px;
 }
 
 .headerImg{
@@ -59,10 +59,16 @@
 .textFont{
     color: black;
     font-size: 14px;
-    margin: 3px 7px;
+    margin: 3px 10px;
 }
 
 .date{
     color: #3B7976;
     margin-top: 6px;
+    margin-bottom: 5px;
+}
+
+.swiperContainer{
+    width: 85%;
+    height: 90%;
 }
