--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,61 @@
     cursor: pointer;
     font-weight: bold;
 }
+
+.orderBtn{
+    border-radius: 10px;
+    width: 100%;
+    height: 50px;
+    margin-top: 20px;
+    background-color: #3bd7b3;
+    font-size: larger;
+    cursor: pointer;
+}
+.orderBtn:hover{
+    border: inset;
+}
+.modalContainer{
+    display: none;
+    width: 60%;
+    height: 140px;
+    margin-top: 10px;
+    border-radius: 10px;
+    background-color: lightblue;
+    position: relative;
+    z-index: 2;
+    animation-name: animate;
+    animation-duration: 0.6s;
+}
+@keyframes animate {
+    0%{
+        top: -200px;
+        opacity: 0;
+    }
+    100%{
+        top: 10px;
+        opacity: 1;
+    }
+}
+
+.confirmationContainer{
+    display: none;
+    width: 60%;
+    height: 100px;
+    margin-top: 12px;
+    border-radius: 15px;
+    background-color: limegreen;
+    position: relative;
+    z-index: 2;
+    animation-name: confirm;
+    animation-duration: 0.6s;
+}
+@keyframes confirm {
+    0%{
+        top: -200px;
+        opacity: 0;
+    }
+    100%{
+        top: 10px;
+        opacity: 1;
+    }
+}
